<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/large_padding_layout"
        android:paddingEnd="@dimen/large_padding_layout">

        <onedaycat.com.food.fantasy.customview.CustomTextView
            android:id="@+id/food_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding_layout"
            android:gravity="start|center"
            android:textSize="@dimen/medium_font"
            android:textColor="@color/color_font_dark"
            android:text="@string/name_food_test"
            />

        <onedaycat.com.food.fantasy.customview.CustomTextView
            android:id="@+id/food_detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textSize="@dimen/small_font"
            android:textColor="@color/color_font_soft"
            android:text="@string/price_food_test"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/color_bg_solf_gray">

        <onedaycat.com.food.fantasy.customview.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_menu_th"
            android:gravity="start|center"
            android:paddingStart="@dimen/large_padding_layout"
            android:paddingEnd="@dimen/large_padding_layout"
            android:textColor="@color/color_font_dark"
            android:textSize="@dimen/medium_font" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/large_padding_layout">

        <onedaycat.com.food.fantasy.customview.CustomTextView
            android:id="@+id/food_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_describe_food"
            android:gravity="start|end"
            android:textColor="@color/color_font_dark"
            android:textSize="@dimen/medium_font" />
    </FrameLayout>
</LinearLayout>