<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="onedaycat.com.food.fantasy.fantasy.ui.forgotpassword.ConfirmForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/c_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_new_password"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/c_code_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_code_verified"
            android:inputType="textPersonName" />

        <onedaycat.com.food.fantasy.customview.CustomButtonView
            android:id="@+id/btn_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding_layout"
            android:background="@drawable/btn_round_add_to_cart_selector"
            android:text="@string/confirm_password" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>