<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="onedaycat.com.food.fantasy.fantasy.ui.signin.SignInActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/w_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/w_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_navigation_notification_height"
            android:orientation="horizontal">

            <onedaycat.com.food.fantasy.customview.CustomButtonView
                android:id="@+id/w_btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_btn_signin" />

            <onedaycat.com.food.fantasy.customview.CustomButtonView
                android:id="@+id/w_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/txt_btn_signup" />

        </LinearLayout>

        <onedaycat.com.food.fantasy.customview.CustomTextView
            android:id="@+id/s_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding_layout"
            android:layout_gravity="end"
            android:padding="@dimen/medium_padding_layout"
            android:text="@string/sign_in_forgot_password" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>