<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/food_detail_control"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/shadow_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_shadow" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/fixed_height_layout_bottom"
        android:layout_below="@+id/shadow_line">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/color_bg_white"
            android:padding="@dimen/large_padding_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btn_remove_qty"
                            android:layout_width="@dimen/size_btn_small"
                            android:layout_height="@dimen/size_btn_small"
                            android:layout_gravity="center"
                            android:background="@drawable/selector_btn_remove_cart"/>
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <onedaycat.com.food.fantasy.customview.CustomTextView
                            android:id="@+id/food_detail_qty"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/qty_food_test"
                            android:textSize="@dimen/small_font"
                            android:gravity="center"/>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btn_add_qty"
                            android:layout_width="@dimen/size_btn_small"
                            android:layout_height="@dimen/size_btn_small"
                            android:layout_gravity="center"
                            android:background="@drawable/round_btn_add_qty_selector"/>
                    </FrameLayout>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <onedaycat.com.food.fantasy.customview.CustomTextView
                        android:id="@+id/food_detail_total_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/price_food_test"
                        android:textSize="@dimen/small_font"
                        android:gravity="center|end"/>

                </FrameLayout>

            </LinearLayout>


            <onedaycat.com.food.fantasy.customview.CustomButtonView
                android:id="@+id/btn_add_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@drawable/btn_round_add_to_cart_selector"
                android:text="@string/txt_btn_add"
                android:textAllCaps="false"
                android:textColor="@color/color_bg_white"
                android:textSize="@dimen/small_font"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/large_padding_layout" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>